add cart quantity feature

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="cards">
       <div class="card">
-        <img src="images/solar1.jpg" alt="태양광 설계">
+        <img src="images/태양광.jpg" alt="태양광 설계">
         <h3>설계 & 컨설팅</h3>
         <p>현장 환경 분석과 고객 요구에 맞춘 맞춤 설계를 제공합니다.</p>
       </div>
