--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 
   <!-- 메인 히어로 -->
   <section class="hero">
-    <h2>신뢰 할 수 있는 태양광 발전 파트너</h2>
-    <p>설계 · 시공 · 유지보수까지 맞춤형 에너지 솔루션 제공</p>
+    <div class="hero-content">
+    <h2>신뢰로 연결하고, 기술로 완성합니다</h2>
+    <p>신재생에너지 태양광 시공 전문</p>
+    <p>인허가·유지관리·A/S까지 책임 시공</p>
+    </div>
   </section>
 
   <!-- 서비스 소개 -->
