--- a/index.html
+++ b/index.html
@@ -44,17 +44,19 @@
       </div>
 
       <div class="card">
-        <img src="images/solar2.jpg" alt="태양광 시공">
+        <img src="images/영암하나로마트시공사진.jpg" alt="태양광 시공">
         <h3>설치 & 시공</h3>
         <p>검증된 자재와 전문 인력으로 안정적이고 효율적인 시공을 보장합니다.</p>
       </div>
 
-      <div class="card">
-        <img src="images/solar3.jpg" alt="태양광 유지보수">
-        <h3>유지보수</h3>
-        <p>정기 점검 및 고장 대응으로 장기간 안정적인 운영을 지원합니다.</p>
-      </div>
-    </div>
+<div class="card">
+  <a href="유지보수.html" style="color: inherit; text-decoration: none; display: block;">
+    <img src="images/유지보수2.png" alt="태양광 유지보수">
+    <h3>유지보수</h3>
+    <p>정기 점검 및 고장 대응으로 장기간 안정적인 운영을 지원합니다.</p>
+  </a>
+</div>
+
   </section>
 
   <!-- 정부 지원금 안내 -->
