--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
       </div>
 
       <div class="card">
+      <a href="설치시공.html" style="color: inherit; text-decoration: none; display: block;">
         <img src="images/영암하나로마트시공사진.jpg" alt="태양광 시공">
         <h3>설치 & 시공</h3>
         <p>검증된 자재와 전문 인력으로 안정적이고 효율적인 시공을 보장합니다.</p>
+      <a>
       </div>
 
 <div class="card">
