--- a/설치시공.html
+++ b/설치시공.html
@@ -12,37 +12,41 @@
     }
 
     h2 {
-      font-size: 28px;
-      margin-bottom: 30px;
       text-align: center;
+      margin-bottom: 30px;
+      font-size: 28px;
       font-weight: 600;
     }
 
-    /* 카드 스타일 */
+    /* Masonry 레이아웃 */
     .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 25px;
+      column-count: 3;         /* 화면크기 따라 자동 3~1열 */
+      column-gap: 20px;
+    }
+
+    @media (max-width: 1000px) {
+      .gallery { column-count: 2; }
+    }
+
+    @media (max-width: 600px) {
+      .gallery { column-count: 1; }
     }
 
     .item {
-      background: #fff;
+      display: inline-block;
+      margin-bottom: 20px;
+      width: 100%;
+      background: white;
       border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
       overflow: hidden;
-      transition: 0.3s;
-    }
-
-    .item:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 6px 15px rgba(0,0,0,0.12);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
     }
 
     .item img {
       width: 100%;
-      height: 220px;
-      object-fit: cover;
+      display: block;
       cursor: pointer;
+      border-bottom: 1px solid #eee;
     }
 
     .desc {
@@ -51,13 +55,12 @@
       color: #444;
     }
 
-    /* 팝업 스타일 */
+    /* 팝업 */
     .popup {
       display: none;
       position: fixed;
       top: 0; left: 0;
-      width: 100%;
-      height: 100%;
+      width: 100%; height: 100%;
       background: rgba(0,0,0,0.75);
       justify-content: center;
       align-items: center;
@@ -71,6 +74,7 @@
       box-shadow: 0 4px 20px rgba(0,0,0,0.3);
     }
   </style>
+
 </head>
 
 <body>
@@ -81,22 +85,32 @@
 
     <div class="item">
       <img src="images/영암하나로마트시공사진.jpg" onclick="openPopup('images/영암하나로마트시공사진.jpg')">
-      <p class="desc">영암 하나로 마트 태양광 시공</p>
+      <p class="desc">영암하나로마트 태양광 시공</p>
     </div>
 
     <div class="item">
-      <img src="images/sample2.jpg" onclick="openPopup('images/sample2.jpg')">
-      <p class="desc">설치 프레임 구조 작업</p>
+      <img src="images/강진하나로마트시공사진.jpg" onclick="openPopup('images/강진하나로마트시공사진.jpg')">
+      <p class="desc">강진하나로마트 태양광 시공</p>
     </div>
 
     <div class="item">
-      <img src="images/sample3.jpg" onclick="openPopup('images/sample3.jpg')">
-      <p class="desc">패널 배치 완료 모습</p>
+      <img src="images/전남영암군삼호읍대불산단.jpg" onclick="openPopup('images/전남영암군삼호읍대불산단.jpg')">
+      <p class="desc">전남 영암군 삼호읍 대불산단 태양광 시공</p>
     </div>
 
     <div class="item">
-      <img src="images/sample4.jpg" onclick="openPopup('images/sample4.jpg')">
-      <p class="desc">인버터 세팅 작업</p>
+      <img src="images/전남영암군금정면토지설치.jpg" onclick="openPopup('images/전남영암군금정면토지서설치.jpg')">
+      <p class="desc">전남 영암군 금정면 토지 태양광 시공</p>
+    </div>
+
+    <div class="item">
+      <img src="images/전남영암군미암면축사위태양광.jpg" onclick="openPopup('images/전남영암군미암면축사위태양광.jpg')">
+      <p class="desc">전남 영암군 미암면 축사 위 태양광 시공</p>
+    </div>
+
+    <div class="item">
+      <img src="images/전남영암군미암면축사위태양광2.jpg" onclick="openPopup('images/전남영암군미암면축사위태양광2.jpg')">
+      <p class="desc">전남 영암군 미암면 축사 위 태양광 시공</p>
     </div>
 
   </div>
