--- a/설치시공.html
+++ b/설치시공.html
@@ -18,9 +18,8 @@
       font-weight: 600;
     }
 
-    /* Masonry 레이아웃 */
     .gallery {
-      column-count: 3;         /* 화면크기 따라 자동 3~1열 */
+      column-count: 3;
       column-gap: 20px;
     }
 
@@ -55,7 +54,6 @@
       color: #444;
     }
 
-    /* 팝업 */
     .popup {
       display: none;
       position: fixed;
@@ -73,15 +71,38 @@
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.3);
     }
-  </style>
 
+    .pagination {
+      margin-top: 40px;
+      text-align: center;
+    }
+
+    .pagination button {
+      margin: 0 5px;
+      padding: 10px 15px;
+      border: none;
+      background: #007bff;
+      color: white;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 15px;
+    }
+
+    .pagination .active {
+      background: #0056b3;
+      font-weight: bold;
+    }
+  </style>
 </head>
 
 <body>
 
   <h2>설치 & 시공 갤러리</h2>
 
-  <div class="gallery">
+  <!-- ==============================
+       ① 네가 직접 넣은 이미지들
+     ============================== -->
+  <div class="gallery" id="gallerySource" style="display:none;">
 
     <div class="item">
       <img src="images/영암하나로마트시공사진.jpg" onclick="openPopup('images/영암하나로마트시공사진.jpg')">
@@ -99,7 +120,7 @@
     </div>
 
     <div class="item">
-      <img src="images/전남영암군금정면토지설치.jpg" onclick="openPopup('images/전남영암군금정면토지서설치.jpg')">
+      <img src="images/전남영암군금정면토지설치.jpg" onclick="openPopup('images/전남영암군금정면토지설치.jpg')">
       <p class="desc">전남 영암군 금정면 토지 태양광 시공</p>
     </div>
 
@@ -115,20 +136,80 @@
 
   </div>
 
+  <!-- 실제 렌더링되는 갤러리 -->
+  <div class="gallery" id="gallery"></div>
+
+  <div class="pagination" id="pagination"></div>
+
   <!-- 팝업 -->
   <div class="popup" id="popup" onclick="closePopup()">
     <img id="popupImg">
   </div>
 
   <script>
+    const itemsPerPage = 30;
+
+    // 원본 이미지 리스트 가져오기
+    const sourceItems = Array.from(document.querySelectorAll("#gallerySource .item"));
+
+    const urlParams = new URLSearchParams(window.location.search);
+    let currentPage = parseInt(urlParams.get("page")) || 1;
+
+    function showPage(page) {
+      currentPage = page;
+
+      const start = (page - 1) * itemsPerPage;
+      const end = start + itemsPerPage;
+
+      const gallery = document.getElementById("gallery");
+      gallery.innerHTML = "";
+
+      const pageItems = sourceItems.slice(start, end);
+
+      pageItems.forEach(item => {
+        gallery.appendChild(item.cloneNode(true));
+      });
+
+      updatePagination();
+    }
+
+    function updatePagination() {
+      const totalPages = Math.ceil(sourceItems.length / itemsPerPage);
+      const pagination = document.getElementById("pagination");
+
+      pagination.innerHTML = "";
+
+      if (currentPage > 1) {
+        pagination.innerHTML += `<button onclick="goPage(${currentPage - 1})">이전</button>`;
+      }
+
+      for (let i = 1; i <= totalPages; i++) {
+        pagination.innerHTML += `
+          <button onclick="goPage(${i})" class="${currentPage === i ? 'active' : ''}">
+            ${i}
+          </button>
+        `;
+      }
+
+      if (currentPage < totalPages) {
+        pagination.innerHTML += `<button onclick="goPage(${currentPage + 1})">다음</button>`;
+      }
+    }
+
+    function goPage(num) {
+      location.href = `?page=${num}`;
+    }
+
     function openPopup(src) {
-      document.getElementById('popupImg').src = src;
-      document.getElementById('popup').style.display = 'flex';
+      document.getElementById("popupImg").src = src;
+      document.getElementById("popup").style.display = "flex";
     }
 
     function closePopup() {
-      document.getElementById('popup').style.display = 'none';
+      document.getElementById("popup").style.display = "none";
     }
+
+    showPage(currentPage);
   </script>
 
 </body>
