--- a/설치시공.html
+++ b/설치시공.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>설치 & 시공 갤러리</title>
+  <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
 
   <style>
     body {
@@ -96,6 +97,7 @@
 </head>
 
 <body>
+   <button onclick="history.back()" class="back-btn">← 뒤로가기</button>
 
   <h2>설치 & 시공 갤러리</h2>
 
@@ -214,3 +216,4 @@
 
 </body>
 </html>
+
