--- a/유지보수.html
+++ b/유지보수.html
@@ -3,77 +3,73 @@
 <head>
   <meta charset="UTF-8">
   <title>태양광 유지보수</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
 
-  <style>
-    /* 유지보수 페이지 전용 스타일 */
-    .maintenance-header {
-      background: linear-gradient(90deg, #007bff, #00aaff);
-      color: white;
-      padding: 80px 20px;
-      text-align: center;
-    }
 
-    .maintenance-header h2 {
-      font-size: 2.5rem;
-      margin-bottom: 15px;
-    }
+<style>
+  /* 유지보수 페이지 전용 깔끔한 화이트 스타일 */
 
-    .maintenance-header p {
-      font-size: 1.1rem;
-      opacity: 0.9;
-    }
+  .maintenance-header {
+    background: #ffffff;
+    padding: 70px 20px;
+    text-align: center;
+    border-bottom: 1px solid #e5e7eb;
+  }
 
-    .maintenance-section {
-      max-width: 900px;
-      margin: 50px auto;
-      background: #fff;
-      padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
+  .maintenance-header h2 {
+    font-size: 2.3rem;
+    color: #1f2937;
+    margin-bottom: 10px;
+  }
 
-    .maintenance-img {
-      width: 100%;
-      border-radius: 12px;
-      margin-bottom: 25px;
-      object-fit: cover;
-    }
+  .maintenance-header p {
+    font-size: 1.1rem;
+    color: #6b7280;
+  }
 
-    .maintenance-section h3 {
-      margin-bottom: 10px;
-      color: #007bff;
-    }
+  .maintenance-section {
+    max-width: 900px;
+    margin: 50px auto;
+    background: #ffffff;
+    padding: 40px;
+    border-radius: 15px;
+    border: 1px solid #e5e7eb;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+  }
 
-    .maintenance-section ul {
-      margin-top: 15px;
-      line-height: 1.8;
-      padding-left: 20px;
-    }
+  /* 이미지 스타일 */
+  .maintenance-img {
+    width: 100%;
+    border-radius: 12px;
+    margin-bottom: 25px;
+    object-fit: cover;
+  }
 
-    .go-contact {
-      margin-top: 30px;
-      text-align: center;
-    }
+  .go-contact {
+    margin-top: 30px;
+    text-align: center;
+  }
 
-    .go-contact a {
-      display: inline-block;
-      padding: 14px 30px;
-      background: linear-gradient(90deg, #007bff, #00aaff);
-      color: white;
-      border-radius: 10px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: 0.3s;
-    }
+  .go-contact a {
+    display: inline-block;
+    padding: 14px 30px;
+    background: linear-gradient(90deg, #007bff, #00aaff);
+    color: white;
+    border-radius: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: 0.3s;
+  }
 
-    .go-contact a:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-    }
-  </style>
+  .go-contact a:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+  }
+</style>
 </head>
 <body>
+
+  <!-- 설치시공과 동일한 위치·디자인의 뒤로가기 버튼 -->
 
   <!-- 상단 배너 -->
   <div class="maintenance-header">
@@ -84,7 +80,6 @@
   <!-- 내용 -->
   <div class="maintenance-section">
 
-    <!-- 이미지 -->
     <img src="images/유지보수.png" alt="태양광 유지보수" class="maintenance-img">
 
     <h3>📌 제공되는 유지보수 서비스</h3>
@@ -98,11 +93,10 @@
 
     <h3 style="margin-top: 40px;">📌 유지보수의 중요성</h3>
     <p>
-      태양광 발전 시스템은 꾸준한 관리가 필수입니다.  
+      태양광 발전 시스템은 꾸준한 관리가 필수입니다.<br>
       정기적인 점검을 통해 발전량을 높이고, 장비 고장을 예방하여 안정적인 발전소 운영을 돕습니다.
     </p>
 
-    <!-- 문의하기 버튼 -->
     <div class="go-contact">
       <a href="https://script.google.com/macros/s/AKfycbxtkWWwd9KqObHsLQ3-8w5EJIhHleensw8giP6HGHukls8sL2ZQMgK9fF7FB-19eelv_A/exec">문의하기</a>
     </div>
