--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="태양광 발전 설비 설치, 유지보수, 정부 지원금 안내까지 원스톱으로 제공하는 전문 태양광 에너지 솔루션 기업입니다.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
 </head>
 <body>
 
