--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>태양광 발전 사업 | 신뢰 할 수 있는 에너지 솔루션</title>
+  <title>태양광 발전 사업 | 신뢰로 연결하고,기술로 완성합니다</title>
   <meta name="description" content="태양광 발전 설비 설치, 유지보수, 정부 지원금 안내까지 원스톱으로 제공하는 전문 태양광 에너지 솔루션 기업입니다.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -26,7 +26,7 @@
   <!-- 메인 히어로 -->
   <section class="hero">
     <div class="hero-content">
-    <h2>신뢰로 연결하고, 기술로 완성합니다</h2>
+    <h2>신뢰로 연결하고, 기술로 완성합니다.</h2>
     <p>신재생에너지 태양광 시공 전문</p>
     <p>인허가·유지관리·A/S까지 책임 시공</p>
     </div>
