--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- 메인 히어로 -->
   <section class="hero">
     <div class="hero-content">
-    <h2>신뢰로 연결하고, 기술로 완성합니다.</h2>
+    <h2>신뢰로 연결하고, 기술로 완성합니다</h2>
     <p>신재생에너지 태양광 시공 전문</p>
     <p>인허가·유지관리·A/S까지 책임 시공</p>
     </div>
