--- a/유지보수.html
+++ b/유지보수.html
@@ -86,9 +86,10 @@
     <ul>
       <li>정기적인 발전 효율 점검</li>
       <li>인버터 및 패널 고장 진단</li>
-      <li>패널 청소 및 구조물 상태 체크</li>
+      <li>태양광 모듈 및 구조물 상태 체크</li>
       <li>데이터 모니터링 및 발전량 분석</li>
       <li>문제 발생 시 빠른 현장 대응</li>
+      <li>태양광 공제보험 조합원 등록으로 태양광 공제보험 할인 및 가입</li>
     </ul>
 
     <h3 style="margin-top: 40px;">📌 유지보수의 중요성</h3>
