--- a/index.html
+++ b/index.html
@@ -8,21 +8,64 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
 </head>
+
+<header class="top-nav">
+  <div class="logo-area">
+    <img src="images/제이솔라로고.png" alt="J-SOLAR 로고" class="logo">
+    <span class="logo-text"></span>
+  </div>
+
+<nav class="navbar">
+  <ul class="menu">
+    <li class="menu-item">
+      <a href="#">회사소개</a>
+      <ul class="submenu">
+        <li><a href="#">기업소개</a></li>
+        <li><a href="#">연혁</a></li>
+        <li><a href="#">인증현황</a></li>
+        <li><a href="#">오시는길</a></li>
+      </ul>
+    </li>
+
+    <li class="menu-item">
+      <a href="#">생산제품</a>
+      <ul class="submenu">
+        <li><a href="#">태양광 모듈</a></li>
+        <li><a href="#">구조물</a></li>
+        <li><a href="#">인버터</a></li>
+      </ul>
+    </li>
+
+    <li class="menu-item">
+      <a href="#">사업분야</a>
+      <ul class="submenu">
+        <li><a href="#">설계</a></li>
+        <li><a href="#">시공</a></li>
+        <li><a href="#">유지관리</a></li>
+      </ul>
+    </li>
+
+    <li class="menu-item">
+      <a href="#">시공사례</a>
+      <ul class="submenu">
+        <li><a href="#">주택</a></li>
+        <li><a href="#">산업용</a></li>
+      </ul>
+    </li>
+
+    <li class="menu-item">
+      <a href="#">고객센터</a>
+      <ul class="submenu">
+        <li><a href="#">공지사항</a></li>
+        <li><a href="#">문의하기</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
+
+</header>
+
 <body>
-
-  <!-- 헤더 -->
-  <header>
-    <h1>제이 솔라</h1>
-    <nav>
-      <a href="index.html">홈</a>
-      <a href="service.html">서비스</a>
-      <a href="cases.html">시공 사례</a>
-      <a href="support.html">지원금 안내</a>
-      <!-- 여기서 contact.html 대신 웹 앱 URL로 이동 -->
-      <a href="https://script.google.com/macros/s/AKfycbxtkWWwd9KqObHsLQ3-8w5EJIhHleensw8giP6HGHukls8sL2ZQMgK9fF7FB-19eelv_A/exec" target="_blank">문의하기</a>
-    </nav>
-  </header>
-
   <!-- 메인 히어로 -->
   <section class="hero">
     <div class="hero-content">
