--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 
 </header>
 
+<!-- 🔥 여기! script.js 연결 -->
+<script src="script.js"></script>
+
 <body>
   <!-- 메인 히어로 -->
   <section class="hero">
