--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <li class="menu-item">
       <a href="#">회사소개</a>
       <ul class="submenu">
-        <li><a href="#">기업소개</a></li>
-        <li><a href="#">연혁</a></li>
-        <li><a href="#">인증현황</a></li>
-        <li><a href="#">오시는길</a></li>
+        <li><a href="기업소개.html">기업소개</a></li>
+        <li><a href="인증현황.html">인증현황</a></li>
+        <li><a href="오시는길.html">오시는길</a></li>
       </ul>
     </li>
 
@@ -41,7 +40,7 @@
       <ul class="submenu">
         <li><a href="#">설계</a></li>
         <li><a href="#">시공</a></li>
-        <li><a href="#">유지관리</a></li>
+        <li><a href="유지보수.html">유지관리</a></li>
       </ul>
     </li>
 
@@ -57,7 +56,7 @@
       <a href="#">고객센터</a>
       <ul class="submenu">
         <li><a href="#">공지사항</a></li>
-        <li><a href="#">문의하기</a></li>
+        <li><a href="https://script.google.com/macros/s/AKfycbxtkWWwd9KqObHsLQ3-8w5EJIhHleensw8giP6HGHukls8sL2ZQMgK9fF7FB-19eelv_A/exec">문의하기</a></li>
       </ul>
     </li>
   </ul>
