--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <a href="#">시공사례</a>
       <ul class="submenu">
         <li><a href="#">주택</a></li>
-        <li><a href="#">산업용</a></li>
+        <li><a href="설치시공.html">산업용</a></li>
       </ul>
     </li>
 
@@ -56,7 +56,7 @@
       <a href="#">고객센터</a>
       <ul class="submenu">
         <li><a href="#">공지사항</a></li>
-        <li><a href="https://script.google.com/macros/s/AKfycbxtkWWwd9KqObHsLQ3-8w5EJIhHleensw8giP6HGHukls8sL2ZQMgK9fF7FB-19eelv_A/exec">문의하기</a></li>
+        <li><a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T">문의하기</a></li>
       </ul>
     </li>
   </ul>
