--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <p>지금 바로 문의하시면 24시간 내 담당자가 연락드립니다.</p>
     <br>
     <!-- 클릭 시 새 탭에서 Google Apps Script 문의 폼 열기 -->
-    <a href="https://script.google.com/macros/s/AKfycbxtkWWwd9KqObHsLQ3-8w5EJIhHleensw8giP6HGHukls8sL2ZQMgK9fF7FB-19eelv_A/exec" target="_blank">
+    <a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T" target="_blank">
       <button style="max-width:300px; padding:14px 28px; background-color:#007bff; color:white; border:none; border-radius:8px; font-size:16px; cursor:pointer;">
         문의하기
       </button>
