--- a/유지보수.html
+++ b/유지보수.html
@@ -102,7 +102,7 @@
     </p>
 
     <div class="go-contact">
-      <a href="https://script.google.com/macros/s/AKfycbxtkWWwd9KqObHsLQ3-8w5EJIhHleensw8giP6HGHukls8sL2ZQMgK9fF7FB-19eelv_A/exec">문의하기</a>
+      <a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T">문의하기</a>
     </div>
   </div>
 
