--- a/오시는길.html
+++ b/오시는길.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>오시는 길 | J-SOLAR</title>
   <meta name="description" content="J-SOLAR 오시는 길 안내 페이지입니다.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1200">
+
 
   <style>
     body {
