--- a/인증현황.html
+++ b/인증현황.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>인증현황 | J-SOLAR</title>
   <meta name="description" content="J-SOLAR의 기업 인증서 및 기술 자격 현황을 소개합니다.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1200">
+
 
   <style>
     body {
