--- a/설치시공.html
+++ b/설치시공.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>설치 & 시공 갤러리</title>
   <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
+  <meta name="viewport" content="width=1200">
+
 
   <style>
     body {
