--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <li class="menu-item">
       <a href="#">시공사례</a>
       <ul class="submenu">
-        <li><a href="#">주택</a></li>
-        <li><a href="설치시공.html">산업용</a></li>
+        <li><a href="설치시공.html">건물&토지</a></li>
       </ul>
     </li>
 
