--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     <li class="menu-item">
       <a href="#">사업분야</a>
       <ul class="submenu">
-        <li><a href="#">설계</a></li>
-        <li><a href="#">시공</a></li>
+        <li><a href="설계컨설팅.html">설계&컨설팅</a></li>
         <li><a href="유지보수.html">유지관리</a></li>
       </ul>
     </li>
@@ -49,14 +48,14 @@
     <li class="menu-item">
       <a href="#">시공사례</a>
       <ul class="submenu">
-        <li><a href="설치시공.html">건물&토지</a></li>
+        <li><a href="설치시공.html">시공사례</a></li>
       </ul>
     </li>
 
     <li class="menu-item">
       <a href="#">고객센터</a>
       <ul class="submenu">
-        <li><a href="#">공지사항</a></li>
+        <li><a href="공지사항.html">공지사항</a></li>
         <li><a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T">문의하기</a></li>
       </ul>
     </li>
@@ -81,13 +80,15 @@
   <!-- 서비스 소개 -->
   <section>
     <h2>태양광 발전 서비스</h2>
-    <p style="margin: 10px 0 40px;">저희는 최적의 발전 효율을 위한 전문적인 설계와 안정적인 시공 경험을 보유하고 있습니다.</p>
+    <p style="margin: 20px 0 40px;">저희는 최적의 발전 효율을 위한 전문적인 설계와 안정적인 시공 경험을 보유하고 있습니다.</p>
 
     <div class="cards">
       <div class="card">
+      <a href="설계컨설팅.html" style="color: inherit; text-decoration: none; display: block;">
         <img src="images/태양광.jpg" alt="태양광 설계">
         <h3>설계 & 컨설팅</h3>
         <p>현장 환경 분석과 고객 요구에 맞춘 맞춤 설계를 제공합니다.</p>
+      <a>
       </div>
 
       <div class="card">
@@ -108,31 +109,6 @@
 
   </section>
 
-  
-  <!-- 회사 소개 -->
-  <section>
-    <h2>왜 저희를 선택해야 하나요?</h2>
-    <p style="margin: 10px 0 40px;">
-      다년간의 태양광 발전 경험과 최신 기술로 고객에게 최고의 에너지 효율을 제공합니다.
-    </p>
-
-    <div class="cards">
-      <div class="card">
-        <h3>10년 이상의 시공 경험</h3>
-        <p>다양한 규모의 프로젝트를 성공적으로 진행한 전문 기업입니다.</p>
-      </div>
-
-      <div class="card">
-        <h3>철저한 품질관리</h3>
-        <p>시공 전후 체계적인 점검 및 관리를 진행합니다.</p>
-      </div>
-
-      <div class="card">
-        <h3>투명한 비용 안내</h3>
-        <p>불필요한 추가 비용 없이 합리적인 견적만 제공합니다.</p>
-      </div>
-    </div>
-  </section>
 
   <!-- 문의 버튼 -->
   <section style="text-align:center;">
