--- a/유지보수.html
+++ b/유지보수.html
@@ -67,6 +67,21 @@
     transform: translateY(-3px);
     box-shadow: 0 10px 25px rgba(0,0,0,0.2);
   }
+      .back-btn {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 12px 22px;
+      background: #007bff;
+      color: #ffffff;
+      border-radius: 10px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: 0.25s;
+    }
+
+    .back-btn:hover {
+      background: #0056b3;
+    }
 </style>
 </head>
 
@@ -106,6 +121,7 @@
     <div class="go-contact">
       <a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T">문의하기</a>
     </div>
+    <a href="index.html" class="back-btn">홈으로 돌아가기</a>
   </div>
 
   <footer>
