--- a/오시는길.html
+++ b/오시는길.html
@@ -84,8 +84,8 @@
       <img src="images/오시는길.png" alt="회사 위치 이미지" class="location-img">
 
       <!-- 📌 주소 입력 -->
-      <p class="address"><strong>주소 :</strong> (전라남도 영암군 영암읍 낭산로 9-4)</p>
-      <p class="address"><strong>전화번호 :</strong> (전화번호 입력)</p>
+      <p class="address"><strong>주소 :</strong> 전라남도 영암군 영암읍 낭산로 9-4</p>
+      <p class="address"><strong>전화번호 :</strong> (010-xxxx-xxxx)</p>
       <p class="address"><strong>영업시간 :</strong> 평일 09:00 ~ 18:00</p>
 
 
