--- a/기업소개.html
+++ b/기업소개.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>기업소개 | JSOLAR</title>
+   <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
 
   <!-- PC 화면 비율 유지 -->
   <meta name="viewport" content="width=1200">
