--- a/오시는길.html
+++ b/오시는길.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>오시는 길 | J-SOLAR</title>
+   <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
   <meta name="description" content="J-SOLAR 오시는 길 안내 페이지입니다.">
   <meta name="viewport" content="width=1200">
 
