--- a/공지사항.html
+++ b/공지사항.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>공지사항 | JSOLAR</title>
+   <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
 
   <!-- PC 화면 축소 형태 유지 -->
   <meta name="viewport" content="width=1200">
