--- a/설계컨설팅.html
+++ b/설계컨설팅.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>설계 컨설팅 | JSOLAR</title>
+   <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
 
   <!-- 모바일에서도 PC처럼 보이게 -->
   <meta name="viewport" content="width=1200">
