--- a/인버터.html
+++ b/인버터.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>인버터 | JSOLAR</title>
+   <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
   <meta name="viewport" content="width=1200">
 
   <style>
