--- a/인증현황.html
+++ b/인증현황.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>인증현황 | J-SOLAR</title>
+   <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
   <meta name="description" content="J-SOLAR의 기업 인증서 및 기술 자격 현황을 소개합니다.">
   <meta name="viewport" content="width=1200">
 
