--- a/index.html
+++ b/index.html
@@ -3,22 +3,156 @@
 <head>
   <meta charset="UTF-8" />
   <title>태양광 발전 사업 | 신뢰로 연결하고,기술로 완성합니다</title>
+
   <meta name="description" content="태양광 발전 설비 설치, 유지보수, 정부 지원금 안내까지 원스톱으로 제공하는 전문 태양광 에너지 솔루션 기업입니다.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style.css"><link rel="icon" type="image/png" href="images/제이솔라로고.png">
+
   <meta name="viewport" content="width=1200">
+
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="images/제이솔라로고.png">
+
+  <!-- 메인 전용 스타일 -->
+  <style>
+
+    /* ================= 메인 배너 강화 ================= */
+
+    .hero {
+      background:
+        linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
+        url("images/태양광.jpg") center/cover no-repeat;
+      color: white;
+      padding: 180px 20px;
+      text-align: center;
+    }
+
+    .hero-content {
+      max-width: 900px;
+      margin: auto;
+    }
+
+    .hero h2 {
+      font-size: 48px;
+      font-weight: 800;
+      margin-bottom: 15px;
+      letter-spacing: 1px;
+    }
+
+    .hero p {
+      font-size: 20px;
+      margin: 6px 0;
+      opacity: 0.95;
+    }
+
+    /* ================= 서비스 섹션 ================= */
+
+    section {
+      padding: -80px 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    section > h2 {
+      text-align: center;
+      font-size: 32px;
+      margin-bottom: 15px;
+      color: #0f766e;
+    }
+
+    section > p {
+      text-align: center;
+      color: #555;
+      font-size: 17px;
+    }
+
+    /* ================= 카드 업그레이드 ================= */
+
+    .card {
+      position: relative;
+      overflow: hidden;
+    }
+
+    .card img {
+      transition: 0.4s;
+    }
+
+    .card:hover img {
+      transform: scale(1.08);
+    }
+
+    .card h3 {
+      font-size: 20px;
+      margin-top: 10px;
+    }
+
+    .card p {
+      color: #555;
+      font-size: 15px;
+      line-height: 1.6;
+    }
+
+    /* ================= 문의 섹션 ================= */
+
+    .contact-section {
+      background: linear-gradient(to right, #ecfdf5, #f0fdfa);
+      text-align: center;
+      border-radius: 20px;
+      margin: 80px auto;
+      padding: 70px 20px;
+      max-width: 1100px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.07);
+    }
+
+    .contact-section h2 {
+      font-size: 30px;
+      margin-bottom: 10px;
+      color: #0f766e;
+    }
+
+    .contact-section p {
+      font-size: 17px;
+      color: #444;
+    }
+
+    .contact-section button {
+      background: linear-gradient(90deg, #2563eb, #3b82f6);
+      padding: 15px 34px;
+      border-radius: 30px;
+      font-size: 17px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .contact-section button:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+    }
+
+    /* ================= 푸터 개선 ================= */
+
+    footer {
+      background: #0f172a;
+      color: #aaa;
+      padding: 30px;
+      font-size: 14px;
+    }
+
+  </style>
 
 </head>
 
+<body>
+
 <header class="top-nav">
+
   <div class="logo-area">
     <img src="images/제이솔라로고.png" alt="J-SOLAR 로고" class="logo">
     <span class="logo-text"></span>
   </div>
 
 <nav class="navbar">
+
   <ul class="menu">
+
     <li class="menu-item">
       <a href="#">회사소개</a>
       <ul class="submenu">
@@ -59,74 +193,128 @@
         <li><a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T">문의하기</a></li>
       </ul>
     </li>
+
   </ul>
+
 </nav>
 
 </header>
 
-<!-- 🔥 여기! script.js 연결 -->
 <script src="script.js"></script>
 
-<body>
-  <!-- 메인 히어로 -->
-  <section class="hero">
-    <div class="hero-content">
+
+<!-- ================= 메인 배너 ================= -->
+
+<section class="hero">
+
+  <div class="hero-content">
+
     <h2>신뢰로 연결하고, 기술로 완성합니다</h2>
+
     <p>신재생에너지 태양광 시공 전문</p>
-    <p>인허가·유지관리·A/S까지 책임 시공</p>
-    </div>
-  </section>
+    <p>인허가 · 유지관리 · A/S까지 책임 시공</p>
 
-  <!-- 서비스 소개 -->
-  <section>
-    <h2>태양광 발전 서비스</h2>
-    <p style="margin: 20px 0 40px;">저희는 최적의 발전 효율을 위한 전문적인 설계와 안정적인 시공 경험을 보유하고 있습니다.</p>
+  </div>
 
-    <div class="cards">
-      <div class="card">
-      <a href="설계컨설팅.html" style="color: inherit; text-decoration: none; display: block;">
+</section>
+
+
+<!-- ================= 서비스 ================= -->
+
+<section>
+
+  <h2>태양광 발전 서비스</h2>
+
+  <p>최적의 발전 효율을 위한 전문 설계와 안정적인 시공을 제공합니다</p>
+
+  <div class="cards">
+
+    <div class="card">
+
+      <a href="설계컨설팅.html" style="color:inherit; text-decoration:none;">
+
         <img src="images/태양광.jpg" alt="태양광 설계">
+
         <h3>설계 & 컨설팅</h3>
-        <p>현장 환경 분석과 고객 요구에 맞춘 맞춤 설계를 제공합니다.</p>
-      <a>
-      </div>
 
-      <div class="card">
-      <a href="설치시공.html" style="color: inherit; text-decoration: none; display: block;">
+        <p>
+          현장 분석부터 수익성 검토까지
+          고객 맞춤 태양광 솔루션을 제공합니다.
+        </p>
+
+      </a>
+
+    </div>
+
+
+    <div class="card">
+
+      <a href="설치시공.html" style="color:inherit; text-decoration:none;">
+
         <img src="images/영암하나로마트시공사진.jpg" alt="태양광 시공">
-        <h3>설치 & 시공</h3>
-        <p>검증된 자재와 전문 인력으로 안정적이고 효율적인 시공을 보장합니다.</p>
-      <a>
-      </div>
 
-<div class="card">
-  <a href="유지보수.html" style="color: inherit; text-decoration: none; display: block;">
-    <img src="images/유지보수2.png" alt="태양광 유지보수">
-    <h3>유지보수</h3>
-    <p>정기 점검 및 고장 대응으로 장기간 안정적인 운영을 지원합니다.</p>
+        <h3>시공사례</h3>
+
+        <p>
+          검증된 자재와 숙련된 기술력으로
+          안정적인 시공을 약속합니다.
+        </p>
+
+      </a>
+
+    </div>
+
+
+    <div class="card">
+
+      <a href="유지보수.html" style="color:inherit; text-decoration:none;">
+
+        <img src="images/유지보수2.png" alt="유지보수">
+
+        <h3>유지보수</h3>
+
+        <p>
+          정기 점검과 빠른 대응으로
+          장기간 안정 운영을 지원합니다.
+        </p>
+
+      </a>
+
+    </div>
+
+  </div>
+
+</section>
+
+
+<!-- ================= 문의 ================= -->
+
+<section class="contact-section">
+
+  <h2>견적 · 상담 문의</h2>
+
+  <p>전문 상담원이 친절하게 안내해드립니다</p>
+
+  <br>
+
+  <a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T" target="_blank">
+
+    <button>
+      문의하기
+    </button>
+
   </a>
-</div>
 
-  </section>
+</section>
 
 
-  <!-- 문의 버튼 -->
-  <section style="text-align:center;">
-    <h2>견적 또는 상담이 필요하신가요?</h2>
-    <p>지금 바로 문의하시면 24시간 내 담당자가 연락드립니다.</p>
-    <br>
-    <!-- 클릭 시 새 탭에서 Google Apps Script 문의 폼 열기 -->
-    <a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T" target="_blank">
-      <button style="max-width:300px; padding:14px 28px; background-color:#007bff; color:white; border:none; border-radius:8px; font-size:16px; cursor:pointer;">
-        문의하기
-      </button>
-    </a>
-  </section>
+<!-- ================= 푸터 ================= -->
 
-  <!-- 푸터 -->
-  <footer>
-    <p>© 2026 Solar Energy. All Rights Reserved.</p>
-  </footer>
+<footer>
+
+  <p>© 2026 J-SOLAR. All Rights Reserved.</p>
+
+</footer>
 
 </body>
 </html>
