--- a/index.html
+++ b/index.html
@@ -2,317 +2,219 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>태양광 발전 사업 | 신뢰로 연결하고,기술로 완성합니다</title>
+  <title>태양광 발전 전문기업 J-SOLAR | 태양광 시공·설치·유지관리</title>
 
-  <meta name="description" content="태양광 발전 설비 설치, 유지보수, 정부 지원금 안내까지 원스톱으로 제공하는 전문 태양광 에너지 솔루션 기업입니다.">
+  <meta name="description" content="태양광 발전소 설계, 시공, 유지보수, 태양광 모듈·인버터·구조물 전문 기업 J-SOLAR. 신재생에너지 태양광 원스톱 솔루션 제공합니다.">
 
-  <meta name="viewport" content="width=1200">
+  <meta name="keywords" content="태양광, 태양광발전, 태양광설치, 태양광시공, 태양광모듈, 인버터, 구조물, 신재생에너지, 태양광유지보수, 태양광컨설팅">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="images/제이솔라로고.png">
-
-  <!-- 메인 전용 스타일 -->
-  <style>
-
-    /* ================= 메인 배너 강화 ================= */
-
-    .hero {
-      background:
-        linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-        url("images/태양광.jpg") center/cover no-repeat;
-      color: white;
-      padding: 180px 20px;
-      text-align: center;
-    }
-
-    .hero-content {
-      max-width: 900px;
-      margin: auto;
-    }
-
-    .hero h2 {
-      font-size: 48px;
-      font-weight: 800;
-      margin-bottom: 15px;
-      letter-spacing: 1px;
-    }
-
-    .hero p {
-      font-size: 20px;
-      margin: 6px 0;
-      opacity: 0.95;
-    }
-
-    /* ================= 서비스 섹션 ================= */
-
-    section {
-      padding: -80px 20px;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    section > h2 {
-      text-align: center;
-      font-size: 32px;
-      margin-bottom: 15px;
-      color: #0f766e;
-    }
-
-    section > p {
-      text-align: center;
-      color: #555;
-      font-size: 17px;
-    }
-
-    /* ================= 카드 업그레이드 ================= */
-
-    .card {
-      position: relative;
-      overflow: hidden;
-    }
-
-    .card img {
-      transition: 0.4s;
-    }
-
-    .card:hover img {
-      transform: scale(1.08);
-    }
-
-    .card h3 {
-      font-size: 20px;
-      margin-top: 10px;
-    }
-
-    .card p {
-      color: #555;
-      font-size: 15px;
-      line-height: 1.6;
-    }
-
-    /* ================= 문의 섹션 ================= */
-
-    .contact-section {
-      background: linear-gradient(to right, #ecfdf5, #f0fdfa);
-      text-align: center;
-      border-radius: 20px;
-      margin: 80px auto;
-      padding: 70px 20px;
-      max-width: 1100px;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.07);
-    }
-
-    .contact-section h2 {
-      font-size: 30px;
-      margin-bottom: 10px;
-      color: #0f766e;
-    }
-
-    .contact-section p {
-      font-size: 17px;
-      color: #444;
-    }
-
-    .contact-section button {
-      background: linear-gradient(90deg, #2563eb, #3b82f6);
-      padding: 15px 34px;
-      border-radius: 30px;
-      font-size: 17px;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-
-    .contact-section button:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.25);
-    }
-
-    /* ================= 푸터 개선 ================= */
-
-    footer {
-      background: #0f172a;
-      color: #aaa;
-      padding: 30px;
-      font-size: 14px;
-    }
-
-  </style>
-
 </head>
 
 <body>
 
+<!-- ================= HEADER ================= -->
+
 <header class="top-nav">
 
   <div class="logo-area">
-    <img src="images/제이솔라로고.png" alt="J-SOLAR 로고" class="logo">
-    <span class="logo-text"></span>
+    <img src="images/제이솔라로고.png" alt="J-SOLAR 태양광 전문기업" class="logo">
+    <span class="logo-text">J-SOLAR</span>
   </div>
 
-<nav class="navbar">
+  <nav class="navbar">
+    <ul class="menu">
 
-  <ul class="menu">
+      <li class="menu-item">
+        <a href="#">회사소개</a>
+        <ul class="submenu">
+          <li><a href="기업소개.html">기업소개</a></li>
+          <li><a href="인증현황.html">인증현황</a></li>
+          <li><a href="오시는길.html">오시는길</a></li>
+        </ul>
+      </li>
 
-    <li class="menu-item">
-      <a href="#">회사소개</a>
-      <ul class="submenu">
-        <li><a href="기업소개.html">기업소개</a></li>
-        <li><a href="인증현황.html">인증현황</a></li>
-        <li><a href="오시는길.html">오시는길</a></li>
-      </ul>
-    </li>
+      <li class="menu-item">
+        <a href="#">생산제품</a>
+        <ul class="submenu">
+          <li><a href="태양광모듈.html">태양광 모듈</a></li>
+          <li><a href="구조물.html">구조물</a></li>
+          <li><a href="인버터.html">인버터</a></li>
+        </ul>
+      </li>
 
-    <li class="menu-item">
-      <a href="#">생산제품</a>
-      <ul class="submenu">
-        <li><a href="태양광모듈.html">태양광 모듈</a></li>
-        <li><a href="구조물.html">구조물</a></li>
-        <li><a href="인버터.html">인버터</a></li>
-      </ul>
-    </li>
+      <li class="menu-item">
+        <a href="#">사업분야</a>
+        <ul class="submenu">
+          <li><a href="설계컨설팅.html">설계 & 컨설팅</a></li>
+          <li><a href="유지보수.html">유지관리</a></li>
+        </ul>
+      </li>
 
-    <li class="menu-item">
-      <a href="#">사업분야</a>
-      <ul class="submenu">
-        <li><a href="설계컨설팅.html">설계&컨설팅</a></li>
-        <li><a href="유지보수.html">유지관리</a></li>
-      </ul>
-    </li>
+      <li class="menu-item">
+        <a href="#">시공사례</a>
+        <ul class="submenu">
+          <li><a href="설치시공.html">시공사례</a></li>
+        </ul>
+      </li>
 
-    <li class="menu-item">
-      <a href="#">시공사례</a>
-      <ul class="submenu">
-        <li><a href="설치시공.html">시공사례</a></li>
-      </ul>
-    </li>
+      <li class="menu-item">
+        <a href="#">고객센터</a>
+        <ul class="submenu">
+          <li><a href="공지사항.html">공지사항</a></li>
+          <li><a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T">문의하기</a></li>
+        </ul>
+      </li>
 
-    <li class="menu-item">
-      <a href="#">고객센터</a>
-      <ul class="submenu">
-        <li><a href="공지사항.html">공지사항</a></li>
-        <li><a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T">문의하기</a></li>
-      </ul>
-    </li>
-
-  </ul>
-
-</nav>
+    </ul>
+  </nav>
 
 </header>
 
 <script src="script.js"></script>
 
 
-<!-- ================= 메인 배너 ================= -->
+<!-- ================= HERO ================= -->
 
-<section class="hero">
+<section class="hero"
+  style="
+  background:
+  linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
+  url('images/태양광.jpg') center/cover no-repeat;
+  min-height: 80vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+">
 
   <div class="hero-content">
 
-    <h2>신뢰로 연결하고, 기술로 완성합니다</h2>
+    <h1>신뢰로 연결하고, 기술로 완성합니다</h1>
 
-    <p>신재생에너지 태양광 시공 전문</p>
-    <p>인허가 · 유지관리 · A/S까지 책임 시공</p>
+    <p>신재생에너지 태양광 발전 전문기업</p>
 
-  </div>
+    <p>설계 · 시공 · 유지관리 · A/S 원스톱 솔루션</p>
 
-</section>
+    <br>
 
-
-<!-- ================= 서비스 ================= -->
-
-<section>
-
-  <h2>태양광 발전 서비스</h2>
-
-  <p>최적의 발전 효율을 위한 전문 설계와 안정적인 시공을 제공합니다</p>
-
-  <div class="cards">
-
-    <div class="card">
-
-      <a href="설계컨설팅.html" style="color:inherit; text-decoration:none;">
-
-        <img src="images/태양광.jpg" alt="태양광 설계">
-
-        <h3>설계 & 컨설팅</h3>
-
-        <p>
-          현장 분석부터 수익성 검토까지
-          고객 맞춤 태양광 솔루션을 제공합니다.
-        </p>
-
-      </a>
-
-    </div>
-
-
-    <div class="card">
-
-      <a href="설치시공.html" style="color:inherit; text-decoration:none;">
-
-        <img src="images/영암하나로마트시공사진.jpg" alt="태양광 시공">
-
-        <h3>시공사례</h3>
-
-        <p>
-          검증된 자재와 숙련된 기술력으로
-          안정적인 시공을 약속합니다.
-        </p>
-
-      </a>
-
-    </div>
-
-
-    <div class="card">
-
-      <a href="유지보수.html" style="color:inherit; text-decoration:none;">
-
-        <img src="images/유지보수2.png" alt="유지보수">
-
-        <h3>유지보수</h3>
-
-        <p>
-          정기 점검과 빠른 대응으로
-          장기간 안정 운영을 지원합니다.
-        </p>
-
-      </a>
-
-    </div>
+    <a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T" target="_blank">
+      <button>무료 상담 신청</button>
+    </a>
 
   </div>
 
 </section>
 
 
-<!-- ================= 문의 ================= -->
+<!-- ================= SERVICE ================= -->
 
-<section class="contact-section">
+<section style="width:100%; padding:80px 40px; background:#ffffff;">
 
-  <h2>견적 · 상담 문의</h2>
+  <div style="max-width:1400px; margin:auto;">
 
-  <p>전문 상담원이 친절하게 안내해드립니다</p>
+    <h2 style="text-align:center; font-size:32px; margin-bottom:15px;">
+      태양광 발전 종합 서비스
+    </h2>
 
-  <br>
+    <p style="text-align:center; margin-bottom:50px; color:#555;">
+      태양광 설계부터 시공, 유지관리까지 책임지는 전문 기업입니다.
+    </p>
+
+
+    <div class="cards">
+
+      <div class="card">
+        <a href="설계컨설팅.html">
+
+          <img src="images/태양광.jpg" alt="태양광 설계 컨설팅">
+
+          <h3>설계 & 컨설팅</h3>
+
+          <p>
+            발전 효율 분석, 수익성 검토, 맞춤 설계로
+            안정적인 태양광 발전사업을 지원합니다.
+          </p>
+
+        </a>
+      </div>
+
+
+      <div class="card">
+        <a href="설치시공.html">
+
+          <img src="images/영암하나로마트시공사진.jpg" alt="태양광 시공 사례">
+
+          <h3>시공 사례</h3>
+
+          <p>
+            검증된 자재와 전문 시공팀으로
+            전국 태양광 발전소 시공 실적 보유
+          </p>
+
+        </a>
+      </div>
+
+
+      <div class="card">
+        <a href="유지보수.html">
+
+          <img src="images/유지보수2.png" alt="태양광 유지보수">
+
+          <h3>유지보수</h3>
+
+          <p>
+            정기 점검 · 모니터링 · 장애 대응으로
+            발전 효율 극대화 관리 서비스
+          </p>
+
+        </a>
+      </div>
+
+    </div>
+
+  </div>
+
+</section>
+
+
+<!-- ================= CTA ================= -->
+
+<section
+  style="
+  width:100%;
+  padding:80px 20px;
+  background:linear-gradient(90deg,#007bff,#00aaff);
+  color:white;
+  text-align:center;
+">
+
+  <h2 style="font-size:30px; margin-bottom:15px;">
+    태양광 발전 사업 상담
+  </h2>
+
+  <p style="margin-bottom:25px;">
+    정부지원 · 발전수익 · 설치비용 무료 상담
+  </p>
 
   <a href="https://jsolar001.cafe24.com/shop1/front/php/b/board_list.php?board_no=1&is_pcver=T" target="_blank">
-
-    <button>
-      문의하기
+    <button style="background:white; color:#007bff;">
+      지금 문의하기
     </button>
-
   </a>
 
 </section>
 
 
-<!-- ================= 푸터 ================= -->
+<!-- ================= FOOTER ================= -->
 
 <footer>
 
-  <p>© 2026 J-SOLAR. All Rights Reserved.</p>
+  <p>
+    © 2026 J-SOLAR | 태양광 발전 전문기업 | All Rights Reserved.
+  </p>
 
 </footer>
 
